# veerox-

./: .env.example  .gitignore  API Alternatives.docx  Dockerfile  README.md  alembic.ini  compose.yml  dump.rdb  pyproject.toml
apps/api/: config.py  deps.py  logging.py  main.py  redis_client.py  sentry.py
apps/api/channels/voice/: realtime_bridge.py
apps/api/channels/whatsapp/: adapter.py  client.py  webhook.py
apps/api/cli/: chat.py
apps/api/core/: agent.py  llm.py  memory.py  prompts.py  tools.py  transcribe.py
apps/api/db/: base.py  session.py
apps/api/db/models/: __init__.py  conversation.py  lead.py  message.py  org.py  user.py
apps/api/routers/: admin.py  conversations.py  health.py  leads.py
apps/api/schemas/: admin.py  conversation.py  lead.py  message.py
apps/api/tests/: conftest.py  test_agent_core.py  test_health.py  test_llm.py  test_memory.py  test_tools.py  test_whatsapp_adapter.py  test_whatsapp_webhook.py
apps/web/: .env.example  README.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts  vitest.setup.ts
apps/web/e2e/: smoke.spec.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: nav.tsx  providers.tsx  stat-card.tsx  transcript-bubble.tsx
apps/web/src/lib/: api.ts  format.ts  (+4 more)
client-onboarding/: 01-meta-whatsapp-setup.md  02-twilio-setup.md  03-openai-setup.md
longrunning/: README.md
longrunning/architecture/: architecture.md  diagrams.md
longrunning/decisions/: api-alternatives.md  tech-stack.md
longrunning/operations/: pitfalls.md
longrunning/planning/: frontend ui plan.md  implementation-plan.md  plan.md  production-plan.md  scaffold-plan.md
migrations/: env.py
migrations/versions/: 1293c6321767_initial_schema.py  7abd1871474e_initial_schema.py
scripts/: dev.sh  make_plan_pdf.py  md_to_pdf.py  seed.py
(+52 files in other folders)
